TINY-3437: Fixed the content not wrapping with really long words

--- a/src/less/theme/content/contenteditable/contenteditable.less
+++ b/src/less/theme/content/contenteditable/contenteditable.less
@@ -10,6 +10,8 @@
 //
 
 .mce-content-body {
+  word-wrap: break-word;
+
   .mce-visual-caret {
     background-color: black;
     background-color: currentcolor;
